<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="funs.games.page.GfSettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_mode"
        android:textColor="@color/text_black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/setting_tv_max_width"
            android:text="@string/guide_mode_summary"
            android:textColor="@color/text_grey"
            android:textSize="18sp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:checked="true"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_top_margin"
        android:text="@string/keys_style"
        android:textColor="@color/text_black"
        android:textSize="20sp"
        android:textStyle="bold" />
    <RadioGroup
        android:id="@+id/rg_kb_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_kb_colorful"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/colorful"
            android:textColor="@color/black_key"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb_kb_classical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/classical"
            android:textColor="@color/black_key"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_colorful"
            android:layout_width="0dp"
            android:layout_height="@dimen/kb_style_img_height"
            android:layout_weight="3"
            android:src="@drawable/ic_colorful" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_classical"
            android:layout_width="0dp"
            android:layout_height="@dimen/kb_style_img_height"
            android:layout_gravity="start"
            android:layout_weight="3"
            android:src="@drawable/ic_classical" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/song_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_top_margin"
        android:text="@string/select_melody_tips"
        android:textColor="@color/text_black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/song_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/setting_tv_max_width"
        android:visibility="gone"
        android:textColor="@color/text_grey"
        android:textSize="18sp"/>
    <View
        android:layout_width="1dp"
        android:layout_height="70dp"
        android:visibility="gone"/>
</LinearLayout>